<resources>
    <string name="app_name">College Swap</string>

    <string-array name="sections_array">
        <item>Textbooks</item>
        <item>Tickets</item>
        <item>Subleases</item>
        <item>Profile</item>
    </string-array>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="title_activity_main_drawer">College Swap</string>

    <string name="title_section1">Textbooks</string>
    <string name="title_section2">Tickets</string>
    <string name="title_section3">Subleases</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_detail_textbook">Textbook Details</string>
    <string name="title_activity_detail_ticket">Ticket Details</string>
    <string name="title_activity_detail_sublease">Sublease Details</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

    <string name="profile_username_textView">newUser</string>

    <string name="preference_last_nav_drawer_position">lastNavDrawerPosition</string>
    <string name="pref_username_label">Username</string>
    <string name="pref_username_key">username</string>
    <string name="pref_username_default">soccerMoM</string>


    <!-- Strings for profile -->
    <string name="profile_title">My Profile</string>
    <string name="edit_profile_email">E-mail</string>
    <string name="edit_profile_phone">Phone Number:</string>



<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_placeholder">Edit Profile</string>
    <string name="string">Number of Bed and Bath</string>
    <string name="strings">$400</string>
    <string name="s1">Number of Bed/Baths</string>
    <string name="s2">Details</string>
    <string name="s3">2 Bath 3 Bed</string>
    <string name="s4">This is a great apartment. Close to campus with great ammenties.</string>
    <string name="s5">Seller</string>
    <string name="s6">Asking Price Per Month</string>
    <string name="s7">The Lofts</string>
    <string name="s8">Bob</string>
    <string name="s9">Apartment</string>

</resources>
