<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ua.collegeswap.view.DetailTextbook"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strings"
        android:id="@+id/textPriceLabel"
        android:layout_alignTop="@+id/textPriceLabel"
        android:layout_alignRight="@+id/textSeller"
        android:layout_alignEnd="@+id/textSeller"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/s9"
        android:id="@+id/aptLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s8"
        android:id="@+id/textSeller"
        android:layout_alignTop="@+id/textViewLabelSeller"
        android:layout_alignRight="@+id/AptName"
        android:layout_alignEnd="@+id/AptName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s7"
        android:id="@+id/AptName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/s6"
        android:id="@+id/textPriceLabel"
        android:layout_below="@+id/aptLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/s5"
        android:id="@+id/textViewLabelSeller"
        android:layout_below="@+id/textPriceLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s4"
        android:id="@+id/textDetails"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textSeller"
        android:layout_alignEnd="@+id/textSeller" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/s1"
        android:id="@+id/textViewBedBath"
        android:layout_below="@+id/textViewLabelSeller"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/s3"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/textViewBedBath"
        android:layout_alignRight="@+id/textSeller"
        android:layout_alignEnd="@+id/textSeller" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/s2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textViewBedBath"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
